Bug 164876 - extra para in header before table
Summary: extra para in header before table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.5.2 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:25.8.0 target:25.2.2 target:24...
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks: DOCX-Header-Footer
  Show dependency treegraph
 
Reported: 2025-01-27 21:24 UTC by Justin L
Modified: 2025-02-12 15:21 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
forum-mso-en4-383968.docx: should be 4 pages long (20.95 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-01-27 21:24 UTC, Justin L
Details
forum-mso-de-103473.docx: no paragraph before table in header (75.70 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-01-28 21:22 UTC, Justin L
Details
moz1211781-1.docx: shouldn't have empty para before table in header (549.26 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-02-05 19:10 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2025-01-27 21:24:11 UTC
Created attachment 198789 [details]
forum-mso-en4-383968.docx: should be 4 pages long

There are two empty paragraphs before the table in this header - and there should only be one.

This started in 25.2 (backported to 24.2.5)
with commit ef77086255821d61838a7e26fee9baadaca0b9e0
Author: Michael Stahl on Wed Jun 19 11:54:13 2024 +0200
    tdf#161631 writerfilter: move another member to SubstreamContext

I assume this broke some assumptions made earlier, so not blaming anyone at this point.

Steps to reproduce:
1.) open forum-mso-en4-383968.docx

Look in the header with View - Formatting Marks turned on. There should only be one empty paragraph before the table.

Found by Collabora's mso-test
Comment 1 Justin L 2025-01-28 21:22:26 UTC
Created attachment 198819 [details]
forum-mso-de-103473.docx: no paragraph before table in header

Here is another example. This time there should not be any empty paragraphs before the table in the header.
Comment 2 Justin L 2025-02-05 19:10:01 UTC
Created attachment 199004 [details]
moz1211781-1.docx: shouldn't have empty para before table in header

This example is long-standing - it was not exposed by comment 0's commit. But it would still be good to check this along with a fix to see if it covers this edge case as well.
Comment 3 BogdanB 2025-02-09 09:19:58 UTC
Confirmed with
Version: 25.2.0.3 (X86_64) / LibreOffice Community
Build ID: e1cf4a87eb02d755bce1a01209907ea5ddc8f069
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2025-02-10 14:14:23 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/44eda1f72b4d67b9627155741067d3e57a1f9747

tdf#164876 tdf#165117 writerfilter: no dummy paragraphs in header

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-02-10 15:57:56 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/e2a49e43bf7258146202a4a177c3a91d24801c12

tdf#164876 tdf#165117 writerfilter: no dummy paragraphs in header

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-02-10 19:56:32 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/663e8084233590da7eeeeffd5edce6a797eb05af

tdf#164876 tdf#165117 writerfilter: no dummy paragraphs in header

It will be available in 24.8.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.