tdf#164876 tdf#165117 writerfilter: no dummy paragraphs in header

The problem was that an extra CR was being added
(often every round-trip) to headers that started with a table.

This is a long-standing bug (see moz1211781-1.docx)
that got more exposure recently from changes to
7.6.6 (via 86ad08f9d25110e91e92a0badf6de75e785b3644)
and 24.8.0 (via ef77086255821d61838a7e26fee9baadaca0b9e0)

Change-Id: Idb6a0efda246fa064822f01a9ce097f686810b5c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181307
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit 44eda1f72b4d67b9627155741067d3e57a1f9747)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181354
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181368
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181420
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>